# dlt-worker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dlt_worker/: __main__.py  config.py  health.py  main.py  pipeline_runner.py  platform_client.py
tests/: test_main.py  test_pipeline_runner.py  test_platform_client.py
