[project]
name = "dlt-worker"
version = "0.1.0"
description = "Worker that polls a Platform API for pipeline configurations and runs them via dlt"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "dlt[pyiceberg,filesystem,s3,parquet]>=1.5",
    "pyiceberg[pyarrow]>=0.10",
    "requests>=2.32",
    "croniter>=6.0",
]

[project.urls]
Homepage = "https://github.com/fairtier/dlt-worker"
Repository = "https://github.com/fairtier/dlt-worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlt_worker"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
extra-paths = ["src"]

